--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- customize styles -->
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
     <!-- HEader stared -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -27,16 +29,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#Backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
 
 
@@ -48,7 +50,7 @@
         </nav>
 
         <!-- image slides only -->
-        <section class="container">
+        <section class="container" id="Home">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -61,7 +63,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
 
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row bg-info-new bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     Cool Dude Headphone
@@ -86,7 +88,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row bg-info-new bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     X-Box for your living room
@@ -109,7 +111,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row bg-info-new bg-gradient p-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     Mega LCD TV For Sports
@@ -171,7 +173,7 @@
 
         </section>
 
-        <section class="container">
+        <section class="container" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -218,7 +220,7 @@
                 </div>
             </div>
         </section>
-        <section class="container">
+        <section class="container my-5" id="Backpack">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -265,9 +267,22 @@
                 </div>
             </div>
         </section>
+        <section style="height: 400px ;"
+            class="container bg-info-new d-flex justify-content-center align-items-center rounded-3 mb-5"
+            id="Subscribe">
+            <div>
+                <h1>LET'S STAY IN TOUCH </h1>
+                <p>Get updates on sales, specials and more </p>
+                <input type="text" placeholder="please give me your email">
+                <br>
+                <button class="btn btn-warning rounded-3">Submit</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="text-center">
+        <div>
+            <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        </div>
     </footer>
 
     <!-- JS Style sheet -->
